refactor: Collections#emptyList.